--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev:server": "ts-node-dev --inspect --transpile-only --ignore node_modules src/server.ts"
   },
   "dependencies": {
+    "date-fns": "^2.28.0",
     "express": "^4.17.3",
     "uuidv4": "^6.2.12"
   },
