--- a/package.json
+++ b/package.json
@@ -5,14 +5,21 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev:server": "ts-node-dev --inspect --transpile-only --ignore node_modules src/server.ts"
+    "dev:server": "ts-node-dev --inspect --transpile-only --ignore node_modules src/server.ts",
+    "start": "ts-node src/index.ts",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "date-fns": "^2.28.0",
     "express": "^4.17.3",
+    "pg": "^8.7.3",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.44",
     "uuidv4": "^6.2.12"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.4.0",
