--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,9 @@
     "@typescript-eslint/no-use-before-define": [
       "error"
     ],
+    "@typescript-eslint/no-usused-vars": ["error", {
+      "argsIgnorePatterns":"_"
+    }],
      "import/extensions": [
       "error",
       "ignorePackages",
